<resources>
    <string name="app_name">AppStory</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="add_content">Add content</string>
    <string name="user_avatar">User photo</string>
    <string name="user_name">User name</string>
    <string name="user_desc">Story Description</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
</resources>