<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:paddingTop="20dp"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_account_circle" />
    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:hint="@string/name" />
    <TextView
        android:id="@+id/tv_name_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_marginBottom="20dp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/ed_register_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    <TextView
        android:id="@+id/tv_email_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_marginBottom="20dp"
        android:visibility="visible" />

    <com.submission.appstory.customView.EditPassword
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <TextView
        android:id="@+id/tv_password_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:layout_marginBottom="20dp"
        android:visibility="visible" />

    <com.submission.appstory.customView.EditPassword
        android:id="@+id/ed_register_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <TextView
        android:id="@+id/tv_password2_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:visibility="visible"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_gravity="center_horizontal"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/register" />
</LinearLayout>